# packages/origine2/src/config/swagger.json
@@ -822,6 +822,71 @@
         ]
       }
     },
+    "/api/manageGame/getFlowchart/{gameName}": {
+      "get": {
+        "operationId": "ManageGameController_getFlowchart",
+        "summary": "Get Game Flowchart",
+        "parameters": [
+          {
+            "name": "gameName",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returned game flowchart."
+          },
+          "404": {
+            "description": "Flowchart file not found."
+          }
+        },
+        "tags": [
+          "Manage Game"
+        ]
+      }
+    },
+    "/api/manageGame/setFlowchart/{gameName}": {
+      "post": {
+        "operationId": "ManageGameController_setFlowchart",
+        "summary": "Set Game Flowchart",
+        "parameters": [
+          {
+            "name": "gameName",
+            "required": true,
+            "in": "path",
+            "description": "Name of the game.",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/SetFlowchartDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Game flowchart saved successfully."
+          },
+          "400": {
+            "description": "Failed to save the game flowchart."
+          }
+        },
+        "tags": [
+          "Manage Game"
+        ]
+      }
+    },
     "/api/manageTemplate/templateList": {
       "get": {
         "operationId": "ManageTemplateController_getTemplateList",
@@ -1429,6 +1494,18 @@
         },
         "required": [
           "platforms"
+        ]
+      },
+      "SetFlowchartDto": {
+        "type": "object",
+        "properties": {
+          "flowchartContent": {
+            "type": "string",
+            "description": "The flowchart content in JSON format"
+          }
+        },
+        "required": [
+          "flowchartContent"
         ]
       },
       "TemplateInfoDto": {
